...

import UIKit

class ViewController3: UIViewController, UITextFieldDelegate {
    
    var textField: UITextField!
    var textField2: UITextField!
    var resultLb: UILabel!
    
    var tf: UITextField!
    
    override func viewDidLoad() {
        super.viewDidLoad()
...
